--- a/mynets/unet-thesis/unet-thesis.tex
+++ b/mynets/unet-thesis/unet-thesis.tex
@@ -1,5 +1,6 @@
 \documentclass[12pt, border=1pt, multi, tikz]{standalone}
 %\usepackage{blocks}
+\usepackage{xcolor}
 \usepackage{import}
 \subimport{../../layers/}{init}
 \usetikzlibrary{positioning}
@@ -15,6 +16,10 @@
 \def\FcReluColor{rgb:blue,5;red,5;white,4}
 \def\SoftmaxColor{rgb:magenta,5;black,7}
 
+\def\TC{black}
+
+\color{\TC}
+
 
 \newcommand{\copymidarrow}{\tikz \draw[-Stealth,line width =0.8mm,draw={rgb:blue,4;red,1;green,1;black,3}] (-0.3,0) -- ++(0.3,0);}
 
@@ -22,6 +27,7 @@
 \begin{tikzpicture}
 \tikzstyle{connection}=[ultra thick,every node/.style={sloped,allow upside down},draw=\edgecolor,opacity=0.3]
 \tikzstyle{copyconnection}=[ultra thick,every node/.style={sloped,allow upside down},draw={rgb:blue,4;red,1;green,1;black,3},opacity=0.6]
+
 
 % Input
 \node[canvas is zy plane at x=0] (temp) at (-1,0,0) 
@@ -462,7 +468,7 @@
 \pic[shift={ (0,0,0) }] at (0,-8,0) 
     {RightBandedBox={
         name=conv-legend,
-        caption= \large{Convolução + \\ ReLU},
+        caption= \textcolor{\TC}{\large{Convolução + \\ ReLU}},
         % xlabel={{ 16, 16 }},
         % zlabel=\\256x256,
         fill=\ConvColor,
@@ -476,7 +482,7 @@
 \pic[shift={ (+5,0,0) }] at (conv-legend-east) 
     {Box={
         name=pool-legend,
-        caption=\large{MaxPooling},
+        caption=\textcolor{\TC}{\large{MaxPooling}},
         fill=\PoolColor,
         opacity=0.5,
         height=5,
@@ -488,7 +494,7 @@
 \pic[shift={ (+5,0,0) }] at (pool-legend-east) 
    {Box={
         name=unpool-legend,
-        caption=\large{MaxUnpooling},
+        caption=\textcolor{\TC}{\large{MaxUnpooling}},
         fill=\UnpoolColor,
         opacity=0.5,
         height=5,
@@ -500,7 +506,7 @@
 \pic[shift={ (+5,0,0) }] at (unpool-legend-east) 
     {RightBandedBox={
         name=cat-legend,
-        caption=\large{Concatenação},
+        caption=\textcolor{\TC}{\large{Concatenação}},
         fill={rgb:white,1;black,3},
         bandfill={rgb:white,1;black,2},
         opacity=0.2,
@@ -513,7 +519,7 @@
 \pic[shift={(+5,0,0)}] at (cat-legend-east)
         {Box={
                 name=output-legend,
-                caption=\large{Convolução + Sigmóide},
+                caption=\textcolor{\TC}{\large{Convolução + Sigmóide}},
                 fill=\SoftmaxColor,
                 height=5,
                 width=5,
